--- a/Frontend/dcfrontend/src/Css/LoginSignup.css
+++ b/Frontend/dcfrontend/src/Css/LoginSignup.css
@@ -186,9 +186,10 @@ form {
         margin: 3% 0;
     }
     .Signupform{
+        
         /* height: 90vh; */
         width: 60vw;
-        margin: 1% 0;
+        margin: 1% auto;
     }
     .social-btn img{
         width: 4vw;
@@ -205,6 +206,7 @@ form {
         margin-top: 20%;
     }
     .Signupform{
+        
         width: 80vw;
         /* height: 90%; */
         padding: 5%;
@@ -253,6 +255,7 @@ form {
 
 @media (min-height: 1200px) and (max-height: 1900px) {
     .loginform {
+
         width: 90vw; 
         height: 100%; 
         padding: 3%;
