--- a/Frontend/dcfrontend/src/Css/LoginSignup.css
+++ b/Frontend/dcfrontend/src/Css/LoginSignup.css
@@ -118,6 +118,10 @@ form {
     align-items: center;
     width:2vw;
 }
+.eyeicon{
+    color: var(--background-color);
+}
+
 /* responsive design for less than 900px */
 @media (max-width: 900px) {
     .loginform {
