--- a/Frontend/dcfrontend/src/Css/Nav.css
+++ b/Frontend/dcfrontend/src/Css/Nav.css
@@ -75,7 +75,7 @@ body {
 
 .nav-menu {
     background-color: var(--backgroundrgba);
-    width: 15vw;
+    width: 18vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -99,7 +99,7 @@ body {
 }
 
 .logo-img {
-    width: 5vw;
+    width: 20%;
     height: auto; /* Adjusted to keep aspect ratio */
 }
 
@@ -202,7 +202,7 @@ span {
     }
 
     .nav-menu {
-        width: 60vw;
+        width: 40vw;
     }
 
     .search-container {
@@ -210,7 +210,7 @@ span {
     }
 
     .logo-img {
-        width: 10vw;
+        width: 20vw;
     }
 
     .logo-name {
@@ -254,3 +254,9 @@ span {
     }
 }
 
+
+@media screen and (max-width: 841px) {
+    .nav-menu {
+         width: 40vw;
+    }
+}
